base.css
html
{
	background: url('montreal.jpg') no-repeat center center;
	background-size: cover;
	min-height:100%;
	overflow: hidden;
	font-family: Arial, sans-serif;
	color: #fff;
}

a{
	color: #000;
	border-bottom: 1px solid #000;
	text-decoration: none;
}

img,
a img {
	border-style: none;
}

a:hover {
	border-bottom-style: dashed;
}

.bold-text {
	font-weight: 900;
}

.small-text {
	font-size: 85%;
}
/* *{border:1px solid red} */
h1#main-blurb {
	background: #fff;
	color: #000;
	padding: 5px;
	display: inline-block;
	border-radius: 3px;
	margin: 100px auto 0 auto;
	font-style: oblique;
}
.row{
	width: 100%;
	display: block;
	float: left;
	text-align: center;
}

#profile-image
{
	width: 300px;
	height: 300px;
	border-radius: 150px;
	border: 6px solid #fff;
}

#main {
	width: 40vw;
	overflow: visible;
	margin: 20vh auto;
}

.speech-bubble {
	float: left;
  width: 300px;
  margin: 50px 0 0 50px;
  background: #fff;
  padding: 20px;
  text-align: center;
	border-radius: 5px;
  color: #000;
	font: 14px Arial;
	line-height: 1.5;
  position: relative;
}

#main img {
	float:left;
}

.speech-bubble:before {
	content: "";
  width: 0px;
  height: 0px;
  position: absolute;
  border-left: 10px solid transparent;
  border-right: 10px solid #fff;
  border-top: 10px solid #fff;
  border-bottom: 10px solid transparent;
  left: -20px;
  top: 6px;
}

#navigation {
	position: fixed;
	right: 10px;
	top: 10px;
}

#about-screen {
	display: none;
	position: absolute;
	width: 100%;
	height: 100%;
	left: 0;
	top: 0;
	background: red;
	text-align: center;
	padding: 20px 0;
}

#navigation-screen {
	display: none;
	position: absolute;
	width: 100%;
	height: 100%;
	left: 0;
	top: 0;
	background: #a0a0a0;
	text-align: center;
	padding: 20px 0;
}

#exit-button {
		display: none;
		position: absolute;
		z-index: 500;
		right: 10px;
		top: 10px;
}

#exit-button img {
	width: 32px;
	height: 32px;
}

#navigation-screen a.link {
	font-size: 48px;
	color: #fff;
	border: none;
	font-family: sans-serif;
	text-decoration: none;
	display: block;
}

#navigation-screen #socials {
	margin-top: 50px;
}

